exports[`test renders correctly when closed 1`] = `
<div
  className="eGgltq">
  I am closed
</div>
`;

exports[`test renders correctly when open 1`] = `
<div
  className="modal-open eGgltq">
  I am open
</div>
`;
